test/test.lox
var x = "Hello";
var y = "World!";
print x + " " + y;

{
  var foo = 9;
  var bar = 10;
  print bar / foo;
  foo = 10;
  print foo / bar;
}

if (false or true) {
  print "Hello, World!";
  print "We can have multiple lines in a block.";
} else {
  print "unreachable";
}

var z = 10;
while (z >= 0) {
  z = z - 1;
  print z;
}
print "Loop done!";

// foo      // error: expected ';' at end of expression
print baz;  // Undefined variable: 'baz'
